--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+4-19 [关于TikTok母公司字节跳动如何崛起，你应该知道的](/articles/nyt/1042847.md)
+
 4-18 [全球掀起产业政策浪潮，引发经济学家忧虑](/articles/nyt/1042848.md)
 
 4-18 [美国“封杀”TikTok对“开放互联网”意味着什么](/articles/nyt/1042849.md)
@@ -598,6 +600,4 @@
 1-11 [中美科技战加剧，微软亚洲研究院还会留在中国吗](/articles/nyt/1043145.md)
 
 1-11 [中美芯片之战的新战线：RISC-V](/articles/nyt/1043146.md)
-
-1-10 [日航和阿拉斯加航空事故“奇迹”的真相](/articles/nyt/1043147.md)
 
