--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+4-19 [以色列和伊朗的“爱恨情仇”](/articles/voa/1016268.md)
+
+4-19 [以色列据报袭击伊朗后，各方的反应 （更新中）](/articles/voa/1016269.md)
+
 4-19 [最新研究指出中国近一半的主要城市正在下沉](/articles/voa/1016270.md)
 
 4-19 [以色列袭击伊朗后，多家国际航班匆忙改道以避开伊朗领空](/articles/voa/1016271.md)
@@ -596,8 +600,4 @@
 4-8 [花莲震后搜救近尾声，漫长重建路刚刚开始](/articles/voa/1016566.md)
 
 4-8 [瑞典驱逐一名为中共大外宣服务的中国籍女记者，称其威胁国家安全](/articles/voa/1016567.md)
-
-4-8 [聿文视界：马英九访中，北京的政治算计和布局](/articles/voa/1016568.md)
-
-4-8 [耶伦：强调对中国产能过剩的担忧并非出于“反华情绪”或“脱钩意愿”](/articles/voa/1016569.md)
 
