--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+4-19 [美媒：以色列发起空袭 伊朗称击落无人机](/articles/dw/1025856.md)
+
+4-19 [巴基斯坦发生自杀式袭击 5日本工人死里逃生](/articles/dw/1025857.md)
+
 4-19 [「優化」空域？中國啟用M503東向銜接航線](/articles/dw/1025858.md)
 
 4-19 [美否決巴勒斯坦加入聯合國 中國：強盜邏輯](/articles/dw/1025859.md)
@@ -596,8 +600,4 @@
 3-25 [香港律政司：批评23条可能触犯23条](/articles/dw/1026154.md)
 
 3-25 [門開一半？中國發展論壇喊開放卻少總理座談](/articles/dw/1026155.md)
-
-3-25 [美日安保傳升級 駐日美軍司令部可望擴權](/articles/dw/1026156.md)
-
-3-24 [墙外文摘：武汉新冠疫情原本可望得到遏制](/articles/dw/1026157.md)
 
